wrapping fix for phone and email profile widget

--- a/css/widgets-profile.less
+++ b/css/widgets-profile.less
@@ -219,6 +219,7 @@
 
 	// ProfileBar: Number
 	.bk-profile-phone {
+		white-space: nowrap;
 		&:before {
 			content: '';
 			display: inline-block;
@@ -231,6 +232,7 @@
 		}
 	}
 	.bk-profile-email {
+		white-space: nowrap;
 		a:before {
 			content: '';
 			display: inline-block;
